samples/_failures_safe/1761610508_cd458f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c378b3ae.c: In function ‘main’:
./samples/SAFE/__tmp_c378b3ae.c:130:12: error: expected ‘;’ at end of input
  130 |     addEdge
      |            ^
      |            ;
./samples/SAFE/__tmp_c378b3ae.c:130:5: error: expected declaration or statement at end of input
  130 |     addEdge
      |     ^~~~~~~
